--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqb (0.10.1-1) unstable; urgency=low
+
+  * update to 0.10.1
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 14 Feb 2012 13:22:53 +0100
+
 libqb (0.10.0-1) unstable; urgency=low
 
   * update to 0.10.0
