update to latest upstream
And recompile for Debian Jessie

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libqb (0.17.1-1) unstable; urgency=medium
+
+  * update to latest upstream
+
+  * recompile for Debian Jessie
+  
+ -- root <root@elsa.maurer-it.com>  Mon, 23 Feb 2015 07:08:25 +0100
+
 libqb (0.10.1-2) unstable; urgency=low
 
   * update to latest upstream which includes the qb_log_filter_fn_set patch
