--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqb (0.17.1-3) unstable; urgency=medium
+
+  * update to latest upstream
+
+ -- Proxmox Support Team <support@proxmox.com>  Tue, 12 May 2015 10:21:07 +0200
+
 libqb (0.17.1-2) unstable; urgency=medium
 
   * update to latest upstream
