--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqb (0.17.2-1) unstable; urgency=medium
+
+  *  update to latest upstream
+
+ -- Proxmox Support Team <support@proxmox.com>  Mon, 21 Sep 2015 11:26:12 +0200
+
 libqb (0.17.1-3) unstable; urgency=medium
 
   * update to latest upstream
