--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqb (1.0-1) unstable; urgency=medium
+
+  * update to latest upstream (v1.0rc1)
+
+ -- Proxmox Support Team <support@proxmox.com>  Wed, 27 Jan 2016 09:58:58 +0100
+
 libqb (0.17.2-1) unstable; urgency=medium
 
   *  update to latest upstream
