--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqb (1.0.1-1) unstable; urgency=medium
+
+  * update to latest upstream (v1.0.1)
+
+ -- Proxmox Support Team <support@proxmox.com>  Wed, 22 Feb 2017 14:38:58 +0100
+
 libqb (1.0-1) unstable; urgency=medium
 
   * update to latest upstream (v1.0rc1)
