--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libqb (1.0.1-2) unstable; urgency=medium
+
+  * rebuild for PVE 5.0 / Debian Stretch
+
+ -- Proxmox Support Team <support@proxmox.com>  Mon, 6 Mar 2017 10:36:26 +0100
+
 libqb (1.0.1-1) unstable; urgency=medium
 
   * update to latest upstream (v1.0.1)
